--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,26 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.stepper-class{
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  width:'22%';
+  margin:33px;
+}
+.main-class{
+  color: brown;
+          margin-top:3rem;
+          padding: .5rem;
+          font-size: 2.5rem;
+}
+ @media only screen and (max-width: 600px){
+  .stepper-class {
+   align-items: center;
+   width: '53%';
+   margin-right: 8rem;
+  }
+}
 
 .App-link {
   color: #61dafb;
